name:                Meinesweeper
version:             0.1.0.0
synopsis:            Minesweeper in Haskell
license:             MIT
license-file:        LICENSE
author:              Ian Connolly, Daniel Cooney, Fintan Halpenny
maintainer:          ian@connolly.io, dacooney@tcd.ie, rossmanf@tcd.ie
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable Meinesweeper
  main-is:             Meinesweeper/Main.hs
  -- other-modules:
  default-extensions:  OverlappingInstances, TypeSynonymInstances, FlexibleInstances, InstanceSigs
  build-depends:       base >=4.7 && <4.8, wx, vector, lens, mtl, cabal-macosx, random
  hs-source-dirs:      src/
  default-language:    Haskell2010
